# sonic-game-hy454

./: CMakeLists.txt  README.md
assets/: Map.csv  background.csv
include/: AnimalSprite.h  BaseSprite.h  BridgeSprite.h  BuzzerEnemy.h  CheckpointSprite.h  CrabmeatEnemy.h  FishEnemy.h  FlowerSprite.h  GameEngine.h  GameMap.h  GameState.h  GameStateManager.h  MotobugEnemy.h  PlatformSprite.h  Player.h  PowerUpSprite.h  RingSprite.h  SoundManager.h  SpikeSprite.h  SpringSprite.h  powerup_effects.h
src/: AnimalSprite.cpp  BaseSprite.cpp  BridgeSprite.cpp  BuzzerEnemy.cpp  CheckpointSprite.cpp  CrabmeatEnemy.cpp  FishEnemy.cpp  FlowerSprite.cpp  GameEngine.cpp  GameMap.cpp  GameStateManager.cpp  MotobugEnemy.cpp  PlatformSprite.cpp  Player.cpp  PowerUpSprite.cpp  RingSprite.cpp  SoundManager.cpp  SpikeSprite.cpp  SpringSprite.cpp  main.cpp  powerup_effects.cpp
